[TBO-72 C1-C] 저장 URL과 외부 통신 보안 경계 강화
